--- a/.github/workflows/initium_onbranch.yaml
+++ b/.github/workflows/initium_onbranch.yaml
@@ -5,6 +5,12 @@ on:
  pull_request:
    types: [opened, synchronize, reopened, closed]
 
+permissions:
+  contents: read
+  packages: write
+  issues: write
+  pull-requests: write
+
 jobs:
   on_pr:
     if: github.event.action != 'closed'
